--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 .container {
     display: flex;
     justify-content: center;
+    align-items: center;
     width: 500px;
     height: 500px;
+}
+
+body {
+    display: flex;
+    justify-content: center;
 }
